Fikser en feil hvor json-fil under resources tilsynelatende ikke blir lest som UTF8 av enkelte java-distribusjoner som videre fører til test-feil